infrastructure/base/apps/kube-prometheus-stack/networkPolicy.yaml
## kube-prometheus-stack components
# allow egress from prometheus to alertmanager
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-egress-from-prometheus-to-alertmanager
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.policy.serviceaccount: kube-prometheus-stack-prometheus
  egress:
    - toEndpoints:
        - matchLabels:
            io.cilium.k8s.policy.serviceaccount: kube-prometheus-stack-alertmanager
      toPorts:
        - ports:
            - port: "9093"
            - port: "8080"
---
# allow egress from alertmanager to telegram
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-egress-from-alertmanager-to-telegram
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.policy.serviceaccount: kube-prometheus-stack-alertmanager
  egress:
    - toFQDNs:
        - matchName: "api.telegram.org"
      toPorts:
        - ports:
            - port: "443"
---
# allow egress from prometheus to kube-state-metrics
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-egress-from-prometheus-to-kube-state-metrics
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.policy.serviceaccount: kube-prometheus-stack-prometheus
  egress:
    - toEndpoints:
        - matchLabels:
            io.cilium.k8s.policy.serviceaccount: kube-prometheus-stack-kube-state-metrics
      toPorts:
        - ports:
            - port: "8080"
---
# allow egress from grafana to kube-apiserver
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-egress-from-grafana-to-kube-apiserver
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.policy.serviceaccount: kube-prometheus-stack-grafana
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
---
# allow egress from grafana to prometheus
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-egress-from-grafana-to-prometheus
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.policy.serviceaccount: kube-prometheus-stack-grafana
  egress:
    - toEndpoints:
        - matchLabels:
            io.cilium.k8s.policy.serviceaccount: kube-prometheus-stack-prometheus
      toPorts:
        - ports:
            - port: "9090"
---
# allow egress from kube-state-metrics to kube-apiserver
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-egress-from-kube-state-metrics-to-api-server
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.policy.serviceaccount: kube-prometheus-stack-kube-state-metrics
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
---
# allow egress from prometheus-operator to kube-apiserver
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-egress-from-prometheus-operator-to-api-server
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.policy.serviceaccount: kube-prometheus-stack-operator
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
---
# allow ingress from prometheus to kube-state-metrics
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-from-prometheus-to-kube-state-metrics
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.policy.serviceaccount: kube-prometheus-stack-kube-state-metrics
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.cilium.k8s.policy.serviceaccount: kube-prometheus-stack-prometheus
      toPorts:
        - ports:
            - port: "8080"
---
# allow ingress from prometheus to alertmanager
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-from-prometheus-to-alertmanager
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.policy.serviceaccount: kube-prometheus-stack-alertmanager
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.cilium.k8s.policy.serviceaccount: kube-prometheus-stack-prometheus
      toPorts:
        - ports:
            - port: "9093"
            - port: "8080"
---
# allow ingress from prometheus to grafana
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-from-prometheus-to-grafana
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.policy.serviceaccount: kube-prometheus-stack-grafana
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.cilium.k8s.policy.serviceaccount: kube-prometheus-stack-prometheus
      toPorts:
        - ports:
            - port: "3000"
---
# allow ingress from kube-apiserver to grafana
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-from-kube-apiserver-to-grafana
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.policy.serviceaccount: kube-prometheus-stack-grafana
  ingress:
    - fromEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "3000"
---
# allow ingress from kube-apiserver to kube-state-metrics
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-from-kube-apiserver-to-kube-state-metrics
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.policy.serviceaccount: kube-prometheus-stack-kube-state-metrics
  ingress:
    - fromEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "8080"
---
# allow ingress from kube-apiserver to prometheus-operator
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-from-kube-apiserver-to-prometheus-operator
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.policy.serviceaccount: kube-prometheus-stack-operator
  ingress:
    - fromEntities:
        - kube-apiserver
        - remote-node
      toPorts:
        - ports:
            - port: "10250"
---
# allow ingress from prometheus to prometheus-operator
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-from-prometheus-to-prometheus-operator
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.policy.serviceaccount: kube-prometheus-stack-operator
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.cilium.k8s.policy.serviceaccount: kube-prometheus-stack-prometheus
      toPorts:
        - ports:
            - port: "10250"
---
# allow ingress from traefik to prometheus
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-from-traefik-to-prometheus
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.policy.serviceaccount: kube-prometheus-stack-prometheus
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.cilium.k8s.policy.serviceaccount: traefik
            io.kubernetes.pod.namespace: traefik
      toPorts:
        - ports:
            - port: "9090"
---
# allow ingress from grafana to prometheus
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-from-grafana-to-prometheus
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.policy.serviceaccount: kube-prometheus-stack-prometheus
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.cilium.k8s.policy.serviceaccount: kube-prometheus-stack-grafana
      toPorts:
        - ports:
            - port: "9090"
---
# allow ingress from traefik to grafana
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-from-traefik-to-grafana
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.policy.serviceaccount: kube-prometheus-stack-grafana
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.cilium.k8s.policy.serviceaccount: traefik
            io.kubernetes.pod.namespace: traefik
      toPorts:
        - ports:
            - port: "3000"
---
# allow ingress from traefik to alertmanager
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-from-traefik-to-alertmanager
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.policy.serviceaccount: kube-prometheus-stack-alertmanager
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.cilium.k8s.policy.serviceaccount: traefik
            io.kubernetes.pod.namespace: traefik
      toPorts:
        - ports:
            - port: "9093"
---
## scraping endpoints
# allow egress from prometheus to scraping endpoints
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-egress-from-prometheus-to-scraping-endpoints
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.policy.serviceaccount: kube-prometheus-stack-prometheus
  egress:
    # Note: as it would be a to high workload to always enable scraping in prometheus, we will allow the whole internal network and the service need to restrict access (e.g. only allow prometheus for scraping endpoint)
    - toEntities:
      - host
      - remote-node
      - cluster
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-egress-from-prometheus-admission-to-apiserver
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.policy.serviceaccount: kube-prometheus-stack-admission
  egress:
    - toEntities:
        - kube-apiserver
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-egress-from-grafana-to-grafana-dashboards
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.policy.serviceaccount: kube-prometheus-stack-grafana
  egress:
    - toFQDNs:
        - matchName: grafana.com
      toPorts:
        - ports:
            - port: "443"
---
# allow egress traffik from grafana to keycloak
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-egress-from-grafana-to-keycloak
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.policy.serviceaccount: kube-prometheus-stack-grafana
  egress:
    - toFQDNs:
        - matchName: id.${DOMAIN_2}
      toPorts:
        - ports:
            - port: "443"
    # Note: why does cilium match it to kube-apiserver, could it be an issue with running workload on control-plane?
    - toEntities:
      - kube-apiserver
      toPorts:
        - ports:
            - port: "443"
# Note following FQDN's could still be needed
# secure.gravatar.com
# storage.googleapis.com
